[package]
name = "rusty_sorter"
version = "0.1.0"
edition = "2021"
authors = [ "Juan-luke Klopper" ]
description = "This is a library of different sorting algorithms"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "cosmicsloth"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "rusty-sorter.wai"}

[dependencies]

wai-bindgen-rust = "0.2.3"
